--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -332,7 +332,7 @@ header
             background-color white
             position absolute
             z-index 1
-            bottom 0
+            bottom 3px /*fix blue line between clouds and cloud_bg*/
         .cloud_parallax
             width 100%
             height 39.36% //135+135/(416+135+135)
@@ -404,6 +404,7 @@ header
             display inline-block
             padding 0 1.56% //10/640
             width 75% //464-10-10/640
+            max-width 450px
             text-align left
             color white
             position relative
@@ -424,6 +425,7 @@ header
             padding 0 1.56% //10/640
             margin-top 44.53% //285/640
             width 75% //464-10-10/640
+            max-width 450px
             text-align left
             color #666666
             .kind_title 
@@ -460,7 +462,8 @@ header
     // display none
     img 
         position absolute
-        top 11px
+        right 2.5%
+        top 1.8%
         max-width 100%
 
 
